--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2935,6 +2935,7 @@
 			background-image: url("images/overlay.png");
 			content: '';
 			display: block;
+			height: 100%;
 			left: 0;
 			top: 0;
 			width: 100%;
