--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2705,7 +2705,7 @@
 		-webkit-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
 		-ms-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
 		transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
-		background-color: #2979ff;
+		background-color: transparent;
 		border-radius: 4px;
 		border: 0;
 		box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.3);
@@ -2768,6 +2768,29 @@
 		.button.big {
 			font-size: 1.35em;
 		}
+
+		input[type="submit"].donate,
+		input[type="reset"].donate,
+		input[type="button"].donate,
+		.button.donate {
+			background-color: #448aff;
+			box-shadow: none;
+			color: #ffffff !important;
+		}
+
+			input[type="submit"].donate:hover,
+			input[type="reset"].donate:hover,
+			input[type="button"].donate:hover,
+			.button.donate:hover {
+				background-color: #2979ff;
+			}
+
+			input[type="submit"].donate:active,
+			input[type="reset"].donate:active,
+			input[type="button"].donate:active,
+			.button.donate:active {
+				background-color: #2962ff;
+			}
 
 		input[type="submit"].special,
 		input[type="reset"].special,
@@ -3105,6 +3128,33 @@
 			.wrapper.style2 .button:active {
 				background-color: rgba(255, 255, 255, 0.25) !important;
 			}
+
+			.wrapper.style2 input[type="submit"].donate,
+			.wrapper.style2 input[type="reset"].donate,
+			.wrapper.style2 input[type="button"].donate,
+			.wrapper.style2 .button.donate {
+				background-color: #448aff;
+				color: #ffffff !important;
+			}
+
+				.wrapper.style2 input[type="submit"].donate:hover, .wrapper.style2 input[type="submit"].donate:active,
+				.wrapper.style2 input[type="reset"].donate:hover,
+				.wrapper.style2 input[type="reset"].donate:active,
+				.wrapper.style2 input[type="button"].donate:hover,
+				.wrapper.style2 input[type="button"].donate:active,
+				.wrapper.style2 .button.donate:hover,
+				.wrapper.style2 .button.donate:active {
+					background-color: #2979ff !important;
+					box-shadow: inset 0 0 0 1px #2962ff !important;
+					color: #ffffff !important;
+				}
+
+				.wrapper.style2 input[type="submit"].donate:active,
+				.wrapper.style2 input[type="reset"].donate:active,
+				.wrapper.style2 input[type="button"].donate:active,
+				.wrapper.style2 .button.donate:active {
+					background-color: #2962ff !important;
+				}
 
 			.wrapper.style2 input[type="submit"].special,
 			.wrapper.style2 input[type="reset"].special,
